[package]
name = "embedded-executor"
version = "0.4.0"
authors = ["Josh Robson Chase <josh@robsonchase.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Embedded systems-friendly `Futures` executor"
documentation = "https://docs.rs/embedded-executor"
repository = "https://gitlab.com/polymer-kb/firmware/embedded-executor"

[dependencies]
lock_api = "0.1.5"

[dependencies.alloc-facade]
version = "0.3.1"
features = ["futures"]

[dependencies.futures-preview]
version = "0.3.0-alpha.15"
default-features = false

[dependencies.generational-arena]
version = "0.2.2"
default_features = false
optional = true

[dev-dependencies]
embrio-async = { git = "https://gitlab.com/polymer-kb/third-party/embrio-rs" }

[features]
default = ["std"]
alloc = ["generational-arena", "alloc-facade/alloc"]
std = ["generational-arena/std", "alloc-facade/std", "futures-preview/std"]