[package]
name = "embedded-executor"
version = "0.5.0"
authors = ["Josh Robson Chase <josh@robsonchase.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Embedded systems-friendly `Futures` executor"
documentation = "https://docs.rs/embedded-executor"
repository = "https://gitlab.com/polymer-kb/firmware/embedded-executor"

[dependencies]
lock_api = "0.3.3"

[dependencies.futures]
version = "0.3.4"
default-features = false

[dependencies.generational-arena]
version = "0.2.7"
default_features = false
optional = true

[dev-dependencies]
embrio-async = { git = "https://gitlab.com/polymer-kb/third-party/embrio-rs" }

[features]
default = ["alloc"]
alloc = ["generational-arena"]
std = ["generational-arena/std", "futures/std"]
